Publish react code to remote repo

--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,12 @@
 .vscode
 .vercel
 
-# node_modules, python cache, dist folder
+# node_modules, python cache, client/dist folder
 node_modules
 __pycache__
+client/dist
 
 # vnvironment variables
 .env
-.env.*
-
-licence
-*.json
 
 !vercel.json
