Some changes in file and readme

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,10 @@
-MYSQLDB_URI=""
+DATABASE_URI=""
 SECRET_KEY=""
 JWT_SECRET=""
-
 CORS_ORIGIN="*"
 TOKEN_EXP="30"
 SERVER_MODE="development"
 
 # Token Exp in Minutes - Here 30 Minutes
-# Server Mode - development/deployment
+# Server Mode - development/production
 # Make sure when deployment time server mode should be - deployment
